--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.2",
     "dotenv": "^16.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.4.0",
     "react-apexcharts": "^1.3.9",
     "react-blockies": "^1.4.1",
     "react-dom": "^18.0.0",
