--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "@reduxjs/toolkit": "^1.8.4",
     "reselect": "^4.1.5",
     "web-vitals": "^2.1.4"
   },
